--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "nodemon app.js"
   },
+  "engines": {
+    "node": "20.2.0"
+  },
   "dependencies": {
     "config": "^3.3.12",
     "cookie-parser": "~1.4.4",
