--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
   "name": "backend",
-  "version": "0.0.0",
-  "private": true,
+  "version": "1.0.0",
+  "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
-  },
-  "engines": {
-    "node": "20.2.0"
+    "server": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "config": "^3.3.12",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
     "dotenv": "^16.4.7",
-    "express": "~4.16.1",
+    "express": "^4.21.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "mongoose": "^8.10.0",
-    "morgan": "~1.9.1",
+    "http-errors": "^2.0.0",
+    "jade": "^1.11.0",
+    "mongoose": "^8.10.1",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
   }
 }
