Logon/Reg With Email added

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ AUDIENCE=https://todo/
 ISSUER_BASE_URL=https://dev-ibaw08zwlal4sqnf.us.auth0.com/
 PORT=8080
 FRONTEND_URL=https://todo-fe-78vg.onrender.com
+SECRET_KEY=heloMehtab
