--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "node": "20.2.0"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -17,6 +19,7 @@
     "express-oauth2-jwt-bearer": "^1.6.0",
     "http-errors": "^2.0.0",
     "jade": "^1.11.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9"
